# yew-simple-shop

./: Cargo.toml  webpack.config.js
src/: app.rs  app_example.rs  entities.rs  lib.rs
src/components/: layout.rs  mod.rs  product_item.rs
src/pages/: cart.rs  home.rs  mod.rs  page_not_found.rs  product.rs  products.rs
static/: index.html
