[package]
name = "yew-simple-shop"
version = "0.1.0"
authors = ["ModPhoenix <ivanchenko.b@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.20"
strum_macros = "0.20"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.69"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.46"
features = [
  'KeyboardEvent',
]
